--- a/doc/en/Makefile.in
+++ b/doc/en/Makefile.in
@@ -427,7 +427,7 @@ uninstall-am: uninstall-info-am
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=Makefile.in index.docbook 
+KDE_DIST=index.docbook Makefile.in index.cache.bz2 
 
 #>+ 24
 index.cache.bz2: $(srcdir)/index.docbook $(KDE_XSL_STYLESHEET) index.docbook 
