--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -4,7 +4,7 @@ all:
 	@echo ""
 	$(MAKE) -f admin/Makefile.common cvs
 
-dist:
-	$(MAKE) -f admin/Makefile.common dist
+#dist:
+#	$(MAKE) -f admin/Makefile.common dist
 
 .SILENT:
