--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -289,8 +289,8 @@ xdg_directorydir = @xdg_directorydir@
 xdg_menudir = @xdg_menudir@
 #>- POFILES = AUTO
 #>+ 2
-POFILES = de.po es.po fr.po it.po pt_BR.po ru.po pl.po
-GMOFILES = de.gmo es.gmo fr.gmo it.gmo pt_BR.gmo ru.gmo pl.gmo
+POFILES = de.po es.po fr.po it.po pl.po pt_BR.po ru.po
+GMOFILES = de.gmo es.gmo fr.gmo it.gmo pl.gmo pt_BR.gmo ru.gmo
 #>- all: all-am
 #>+ 1
 all: all-nls docs-am  all-am
@@ -483,7 +483,7 @@ uninstall-am: uninstall-info-am
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=pt_BR.gmo pl.gmo Makefile.in kcheckgmail.pot ru.po ru.gmo pt_BR.po it.gmo de.gmo pl.po de.po es.po fr.gmo es.gmo it.po fr.po Makefile.am 
+KDE_DIST=Makefile.in kcheckgmail.pot ru.po pt_BR.po pl.po de.po es.po it.po fr.po Makefile.am 
 
 #>+ 22
 de.gmo: de.po
@@ -498,23 +498,23 @@ fr.gmo: fr.po
 it.gmo: it.po
 	rm -f it.gmo; $(GMSGFMT) -o it.gmo $(srcdir)/it.po
 	test ! -f it.gmo || touch it.gmo
+pl.gmo: pl.po
+	rm -f pl.gmo; $(GMSGFMT) -o pl.gmo $(srcdir)/pl.po
+	test ! -f pl.gmo || touch pl.gmo
 pt_BR.gmo: pt_BR.po
 	rm -f pt_BR.gmo; $(GMSGFMT) -o pt_BR.gmo $(srcdir)/pt_BR.po
 	test ! -f pt_BR.gmo || touch pt_BR.gmo
 ru.gmo: ru.po
 	rm -f ru.gmo; $(GMSGFMT) -o ru.gmo $(srcdir)/ru.po
 	test ! -f ru.gmo || touch ru.gmo
-pl.gmo: pl.po
-	rm -f pl.gmo; $(GMSGFMT) -o pl.gmo $(srcdir)/pl.po
-	test ! -f pl.gmo || touch pl.gmo
 
 #>+ 3
 clean-nls:
-	-rm -f  de.gmo es.gmo fr.gmo it.gmo pt_BR.gmo ru.gmo pl.gmo
+	-rm -f  de.gmo es.gmo fr.gmo it.gmo pl.gmo pt_BR.gmo ru.gmo
 
 #>+ 10
 install-nls:
-	@for base in de es fr it pt_BR ru pl ; do \
+	@for base in de es fr it pl pt_BR ru ; do \
 	  echo $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
 	  $(mkinstalldirs) $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES ; \
 	  if test -f $$base.gmo; then $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
@@ -529,9 +529,9 @@ uninstall-nls:
 	rm -f $(DESTDIR)$(kde_locale)/es/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/fr/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/it/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/pl/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/pt_BR/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/ru/LC_MESSAGES/$(PACKAGE).mo
-	rm -f $(DESTDIR)$(kde_locale)/pl/LC_MESSAGES/$(PACKAGE).mo
 
 #>+ 2
 all-nls: $(GMOFILES)
