--- a/doc/en/Makefile.in
+++ b/doc/en/Makefile.in
@@ -477,7 +477,7 @@ uninstall-am: uninstall-info-am
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=Makefile.in index.docbook Makefile.am index.cache.bz2 
+KDE_DIST=Makefile.in index.docbook Makefile.am 
 
 #>+ 24
 index.cache.bz2: $(srcdir)/index.docbook $(KDE_XSL_STYLESHEET) index.docbook 
