--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,15 @@
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
+GCC4_ICES_HERE := arm m68k hppa
+DEB_HOST_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
+
+ifneq (,$(filter $(DEB_HOST_ARCH_CPU),$(GCC4_ICES_HERE)))
+	export CC=gcc-3.4
+	export CPP=cpp-3.4
+	export CXX=g++-3.4
+endif
+
 
 CFLAGS = -Wall -g
 
